--- a/style.css
+++ b/style.css
@@ -4,3 +4,13 @@ body {
   font-family: Helvetica;
   margin: 0;
 }
+header {
+  width: 100%;
+  height: 50px;
+  background-color: #1b1b32;
+  display: flex;
+}
+
+h1 {
+  color: #D92906;
+}
