--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ header h1 {
 }
 
 .hero {
-    background-image: url('your-hero-image.jpg');
+    background-image: url('website_hero_temp.jpg');
     background-size: cover;
     padding: 50px 0;
     text-align: center;
